# gta-idle

./: .gitignore  README.md
gta-afk-c/: CMakeLists.txt  main.c
gta-afk-cpp/: CMakeLists.txt
gta-afk-go/: go.mod  go.sum  main.go
gta-afk-rust/: Cargo.toml
gta-idle-cpp/: CMakeLists.txt  main.cpp
gta-idle-go/: go.mod
gta-idle-rust/: Cargo.toml
gta-idle-rust/src/: main.rs
