[package]
name = "gta-idle-rust"
version = "0.1.0"
authors = ["Rav <49620461+RavMda@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "impl-default"] }
